--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 <link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
     <style>
+      * {
+        background-color: grey !important;
+        color: white;
+      }
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -105,15 +109,14 @@
 
         <div class="col-md-8 order-md-1">
           <h4 class="mb-3">Agregar Productos</h4>
-          <div class="alert alert-danger fade show" style="display:none;"
-                                             role="alert" id="alertValidaciones">
-               <p id="alertValidacionesTexto"></p>
+          <div class="alert alert-danger fade show" style="display:none;" role="alert" id="alertValidaciones">
+            <p id="alertValidacionesTexto"></p>
          </div>
           <form class="needs-validation" novalidate>
             <div class="row">
               <div class="col-md-6 mb-3">
                 <label for="Name">Nombre</label>
-                <input type="text" class="form-control" id="Name" placeholder="" value="" autocomplete="off" required>
+                <input type="text" class="form-control" id="Name" autofocus placeholder="" value="" autocomplete="off" required>
                 <div class="invalid-feedback">
                   Nombre inválido
                 </div>
@@ -122,7 +125,7 @@
                 <label for="Number">Cantidad</label>
                 <input type="text" class="form-control" id="Number" placeholder="" value="" autocomplete="off" required>
                 <div class="invalid-feedback">
-                 Cantidad inválida
+                  Cantidad inválida
                 </div>
               </div>
             </div>
@@ -130,7 +133,18 @@
             <button id="btnClear" class="btn btn-primary btn-lg btn-block" type="button">Limpiar todo</button>
             <hr class="mb-4">
             
-            <!-- Insertar tabla aquí -->
+            <table class="table" id="tablaProductos">
+              <thead>
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">Nombre</th>
+                  <th scope="col">Cantidad</th>
+                  <th scope="col">Precio</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
     
           </form>
         </div>
