Se termina el ejercicio por completo, todos los botnes y campos funcionales

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
 <link rel="icon" href="https://getbootstrap.com/docs/5.2/assets/img/favicons/favicon.ico">
 <meta name="theme-color" content="#712cf9">
     <style>
-      * {
-        background-color: grey !important;
-        color: white;
-      }
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -139,7 +135,7 @@
                   <th scope="col">#</th>
                   <th scope="col">Nombre</th>
                   <th scope="col">Cantidad</th>
-                  <th scope="col">Precio</th>
+                  <th scope="col">Precio unitario</th>
                 </tr>
               </thead>
               <tbody>
@@ -151,7 +147,7 @@
       </div>
     
       <footer class="my-5 pt-5 text-muted text-center text-small">
-        <p class="mb-1">&copy; <div id="fecha"></div> JC Inc.</p>
+        <p class="mb-1">&copy; <div id="fecha"></div> IsaacVB</p>
         <ul class="list-inline">
           <li class="list-inline-item"><a href="#">Privacy</a></li>
           <li class="list-inline-item"><a href="#">Terms</a></li>
